tests/errors/_questions/generated_errors/more_than_1_main/2_main.c
int main ()
{
	//int arr[2] = {1.1,2};
	int a=1;
	int i;
	return 0;
}

int main ()
{
	return 0;
}